Bug 507819 - Task Switcher preview in System Settings is using incorrect font colors
Summary: Task Switcher preview in System Settings is using incorrect font colors
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-03 17:22 UTC by joshas
Modified: 2025-08-05 12:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Notice black font color used in preview (23.90 KB, image/png)
2025-08-03 17:23 UTC, joshas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description joshas 2025-08-03 17:22:04 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Please remove this comment after reading and before submitting - thanks!
***

SUMMARY


STEPS TO REPRODUCE
1. Go to System Settings and open Task Switcher panel.
2. Select "Compact"
3. Press "Preview" button to see how it will look like.

OBSERVED RESULT
Preview renders task list with black font color.

EXPECTED RESULT
White font color should be used in preview, as it is used in "real" task switcher.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Same issue is with other types of Task Switcher, not only compact.
Wayland
Comment 1 joshas 2025-08-03 17:23:10 UTC
Created attachment 183767 [details]
Notice black font color used in preview
Comment 2 Bug Janitor Service 2025-08-03 18:38:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7970
Comment 3 Nicolas Fella 2025-08-04 12:34:48 UTC
Git commit cde0132f522e514abc8ed813f4ed93a5ec3dc855 by Nicolas Fella.
Committed on 04/08/2025 at 12:07.
Pushed by nicolasfella into branch 'master'.

kcms/tabbox: Use Plasma theme for preview

The actual switcher is using Plasma colors, so make sure the preview matches that

M  +1    -0    src/kcms/tabbox/layoutpreview.cpp

https://invent.kde.org/plasma/kwin/-/commit/cde0132f522e514abc8ed813f4ed93a5ec3dc855
Comment 4 Nicolas Fella 2025-08-05 12:43:29 UTC
Git commit b68e469dbc4bd86bd234859ff6e4368bc663d8a1 by Nicolas Fella.
Committed on 05/08/2025 at 11:10.
Pushed by vladz into branch 'Plasma/6.4'.

kcms/tabbox: Use Plasma theme for preview

The actual switcher is using Plasma colors, so make sure the preview matches that


(cherry picked from commit cde0132f522e514abc8ed813f4ed93a5ec3dc855)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +1    -0    src/kcms/tabbox/layoutpreview.cpp

https://invent.kde.org/plasma/kwin/-/commit/b68e469dbc4bd86bd234859ff6e4368bc663d8a1