kcms/tabbox: Use Plasma theme for preview

The actual switcher is using Plasma colors, so make sure the preview matches that

BUG: 507819


(cherry picked from commit cde0132f522e514abc8ed813f4ed93a5ec3dc855)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>